Dataset pathhway not working

--- a/notebooks/BikeSharingDemand.ipynb
+++ b/notebooks/BikeSharingDemand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "be0639dd-c691-4bee-9729-ba576a436f36",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "16123c5d-34ec-4143-aee4-753986062113",
    "metadata": {
     "scrolled": true
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"data\\SeoulBikeData.csv\")\n",
+    "dataset = pd.read_csv(\"..\\data\\SeoulBikeData.csv\")\n",
     "\n",
     "df = dataset.copy()\n",
     "\n",
